Fix layout issues in service and team section

--- a/src/style.css
+++ b/src/style.css
@@ -49,7 +49,6 @@ footer {
   scroll-snap-align: start;
   scroll-snap-stop: always;
   width: 100vw;
-  padding-top: 30px;
   overflow: hidden;
 }
 
@@ -139,8 +138,7 @@ section.visible {
 *        NAVBAR        *
 ***********************/
 header {
-  position: fixed;
-  top: 0;
+  position: absolute;
   width: 100vw;
   z-index: 10;
   padding: 15px 15px;
@@ -421,7 +419,7 @@ header {
 *         TEAM         *
 ***********************/
 
-#team-section{
+#team-section {
   /* border: 1px solid red; */
   display: flex;
   flex-direction: column;
@@ -429,7 +427,7 @@ header {
   align-items: center;
 }
 
-#team-section p{
+#team-section p {
   /* border: 1px solid red; */
   color: white;
   text-align: center;
@@ -438,9 +436,9 @@ header {
   font-size: var(--font-size-mobile);
 }
 
-.team-wrapper{
+.team-wrapper {
   width: 80%;
-  height: 40%;
+  height: 35%;
   /* border: 1px solid blue; */
 }
 
@@ -452,36 +450,35 @@ header {
   display: flex;
   overflow-x: auto;
   scroll-snap-type: x mandatory;
-  
+
 }
 
-.member{
+.member {
   scroll-snap-align: start;
   height: 100%;
   /* max-width: 500px; */
   flex: 0 0 100%;
   display: flex;
   flex-direction: column;
- border: 1px solid white;
-  /* border: 1px solid rgb(8, 245, 71); */
+  border: 1px solid rgba(255, 255, 255, 0.322);
+  border-radius: 20px;
   overflow: hidden;
-  margin-right: 10px;
+  margin-right: 20px;
   position: relative;
-
 }
 
-.member img{
- display: block;
- /* width: 100%; */
- /* height: 100%; */
- background-color: #ffffff;
- object-fit: contain;
- filter: grayscale();
+.member img {
+  display: block;
+  /* width: 100%; */
+  /* height: 100%; */
+  background-color: #ffffff;
+  object-fit: contain;
+  filter: grayscale();
 }
 
 
 
-.member div{
+.member div {
   width: 100%;
   padding: 10px 0;
   background-color: #00000061;
@@ -496,14 +493,13 @@ header {
   font-size: var(--font-size-mobile);
 }
 
-.position{
+.position {
   font-weight: calc(var(--font-weight) + 200);
 }
 
-.name{
+.name {
   font-weight: var(--font-weight);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.401);
-  padding-bottom: 5px;
+
   /* border: 1px solid red; */
 
 }
@@ -552,14 +548,14 @@ header {
 
 }
 
-@media (min-width: 1350px){
+@media (min-width: 1350px) {
   .team {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-}
+
+  }
 }
 
 /***********************
@@ -567,9 +563,10 @@ header {
 ***********************/
 #services-section {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
+  /* border: 1px solid red; */
 }
 
 #services-section p {
@@ -583,9 +580,11 @@ header {
 
 .wrapper {
   width: 95vw;
-  height: 80%;
+  height: 100%;
   /* border: 1px solid red; */
   display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
 
@@ -617,7 +616,7 @@ header {
 
 .div1 {
   grid-column: span 2 / span 2;
-  /* background-color: #333; */
+  background-color: #333;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -674,6 +673,7 @@ header {
   align-items: center;
   gap: 20px;
   flex-direction: row;
+  /* border: 1px solid red; */
 }
 
 .dot {
@@ -788,7 +788,6 @@ header {
 .contact-card {
   border-radius: 20px;
   background-color: transparent;
-  background-color: #16161600;
   border: 1px solid rgba(255, 255, 255, 0.329);
   display: flex;
   align-items: center;
@@ -810,10 +809,12 @@ header {
 .card-info {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 5px;
   align-items: center;
   width: 100%;
-  padding: 15px 0;
+  height: 20vh;
+  /* border: 1px solid red; */
 }
 
 
